# translation-pipeline

./: .gitignore  CLAUDE.md  README.md  languages.py  pyproject.toml  requirements.txt  streamlit_app.py
docs/plans/: 2026-02-23-local-only-refactor-design.md  2026-02-23-local-only-refactor.md
tests/: conftest.py  test_languages.py  test_streamlit_app.py
