[project]
name = "translategemma-pipeline"
version = "0.4.0"
description = "Streamlit app for translating text and images using Google's TranslateGemma 4B model with local GPU inference"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
dependencies = [
    "streamlit",
    "transformers",
    "torch",
    "torchvision",
    "accelerate",
    "python-dotenv",
    "Pillow",
]

[dependency-groups]
dev = [
    "pytest",
    "ruff",
    "ty",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
