[project]
name = "translategemma-translate"
version = "0.5.0"
description = "TranslateGemma Translate — Streamlit app for translating text using mlx-community/translategemma-4b-it-8bit with Apple Silicon inference"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
dependencies = [
    "streamlit",
    "mlx-lm",
]

[dependency-groups]
dev = [
    "pytest",
    "ruff",
    "ty",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
